Updated the IDE to work against trunk.

--- a/org.scala-ide.scala.compiler/pom.xml
+++ b/org.scala-ide.scala.compiler/pom.xml
@@ -124,7 +124,12 @@
             <Bundle-Version>${version.number}${maintenance.suffix}${patch.level.suffix}</Bundle-Version>
             <Bundle-Vendor>scala-ide.org</Bundle-Vendor>
             <Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
-            <_exportcontents>scala.reflect.internal.*;version=${version.number},scala.tools.*;version=${version.number},ch.epfl.lamp.*;version=${version.number}</_exportcontents>
+            <_exportcontents>scala.reflect.internal.*;version=${version.number},
+            scala.reflect.api.*;version=${version.number},
+            scala.reflect.runtime.*;version=${version.number},
+            scala.reflect.std.*;version=${version.number},
+            scala.tools.*;version=${version.number},
+            ch.epfl.lamp.*;version=${version.number}</_exportcontents>
             <Embed-Directory>lib</Embed-Directory>
             <Embed-StripVersion>true</Embed-StripVersion>
             <Include-Resource>lib=${project.build.directory}/lib</Include-Resource>
