Fixed version tag for local builds.

--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -481,6 +481,9 @@
 
     <profile>
       <id>local-scala-trunk</id>
+      <properties>
+        <version.suffix>210</version.suffix>
+      </properties>
       <dependencies>
         <dependency>
           <groupId>org.scala-ide</groupId>
