--- a/org.scala-ide.sdt.core.tests/build.properties
+++ b/org.scala-ide.sdt.core.tests/build.properties
@@ -1,5 +1,6 @@
 source.. = src/
 output.. = target/classes/
 bin.includes = META-INF/,\
-							 test-workspace/,\
+			   test-workspace/,\
+			   lib/,\
                .
