--- a/org.scala-ide.sdt.core.tests/pom.xml
+++ b/org.scala-ide.sdt.core.tests/pom.xml
@@ -45,6 +45,12 @@
       <artifactId>junit</artifactId>
       <version>4.8.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-all</artifactId>
+      <version>1.8.5</version>
+      <scope>compile</scope>
+    </dependency>
   </dependencies>
     
   <build>
