--- a/org.scala-ide.sbt/pom.xml
+++ b/org.scala-ide.sbt/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.scala-ide</groupId>
     <artifactId>scala-toolchain-for-eclipse</artifactId>
-    <version>2.9.1-SNAPSHOT</version>
+    <version>2.10.0-SNAPSHOT</version>
     <relativePath>../org.scala-ide.build-toolchain/pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.sbt.full.library</artifactId>
@@ -407,7 +407,7 @@
                 <artifactItem>
                   <groupId>org.scala-tools.sbt</groupId>
                   <artifactId>precompiled-${sbt.compiled.version}-${scala.precompiled.version}</artifactId>
-                  <version>0.10.1-SNAPSHOT</version>
+                  <version>${sbt.version}</version>
                   <type>jar</type>
                   <destFileName>scala-${scala.major.minor.version}/lib/compiler-interface.jar</destFileName>
                 </artifactItem>
