--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -4,13 +4,13 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.scala-ide</groupId>
   <artifactId>scala-toolchain-for-eclipse</artifactId>
-  <version>2.10.0-SNAPSHOT</version>
+  <version>2.9.1</version>
   <name>The Scala Toolchain for Eclipse</name>
   <packaging>pom</packaging>
 
   <properties>
     <scala.version>2.8.0</scala.version>
-    <sbt.version>0.10.2-SNAPSHOT</sbt.version>
+    <sbt.version>0.10.3</sbt.version>
     <patch.level>p0002</patch.level>
     <encoding>UTF-8</encoding>
   </properties>
@@ -108,7 +108,12 @@
       <properties>
         <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
         <scala.compiler.version>${scala.version}</scala.compiler.version>
+        <sbt.library.qualifier>2_10</sbt.library.qualifier>
+
+        <!-- Used as part of the artifact name for SBT cross-compiled modules. -->
         <scala.major.minor.version>2.10</scala.major.minor.version>
+
+        <!-- Used as part of the artifact name for SBT cross-compiled modules. -->
         <sbt.compiled.version>${sbt.scala.version}</sbt.compiled.version>
         <maintenance.suffix></maintenance.suffix>
         <patch.level.suffix></patch.level.suffix>
@@ -127,8 +132,14 @@
       <properties>
         <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
         <scala.compiler.version>${scala.version}</scala.compiler.version>
+        <sbt.library.qualifier>2_09</sbt.library.qualifier>
+
+        <!-- Used as part of the directory name for compiler-interface.jar. -->
         <scala.major.minor.version>2.9</scala.major.minor.version>
+
+        <!-- Used as part of the artifact name for SBT cross-compiled modules. -->
         <sbt.compiled.version>${sbt.scala.version}</sbt.compiled.version>
+
         <maintenance.suffix></maintenance.suffix>
         <patch.level.suffix></patch.level.suffix>
       </properties>
@@ -146,7 +157,12 @@
       <properties>
         <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
         <scala.compiler.version>${scala.version}</scala.compiler.version>
+        <sbt.library.qualifier>2_08</sbt.library.qualifier>
+
+        <!-- Used as part of the directory name for compiler-interface.jar. -->
         <scala.major.minor.version>2.8</scala.major.minor.version>
+
+        <!-- Used as part of the artifact name for SBT cross-compiled modules. -->
         <sbt.compiled.version>${sbt.scala.version}</sbt.compiled.version>
         <maintenance.suffix></maintenance.suffix>
         <patch.level.suffix></patch.level.suffix>
