--- a/org.scala-ide.sbt/pom.xml
+++ b/org.scala-ide.sbt/pom.xml
@@ -5,10 +5,11 @@
   <parent>
     <groupId>org.scala-ide</groupId>
     <artifactId>scala-toolchain-for-eclipse</artifactId>
-    <version>2.10.0-SNAPSHOT</version>
+    <version>2.9.1</version>
     <relativePath>../org.scala-ide.build-toolchain/pom.xml</relativePath>
   </parent>
   <artifactId>org.scala-ide.sbt.full.library</artifactId>
+  <version>${sbt.version}.${sbt.library.qualifier}</version>
   <packaging>bundle</packaging>
   <dependencies>
     <dependency>
@@ -447,7 +448,7 @@
           <instructions>
             <Bundle-SymbolicName>org.scala-ide.sbt.full.library</Bundle-SymbolicName>
             <Bundle-Name>Sbt ${sbt.version} Library for Eclipse</Bundle-Name>
-            <Bundle-Version>${scala.version}${patch.level.suffix}</Bundle-Version>
+            <Bundle-Version>${sbt.version}.${sbt.library.qualifier}</Bundle-Version>
             <Embed-Dependency>*;scope=compile|runtime;inline=false</Embed-Dependency>
             <_exportcontents>sbt.*;version=${sbt.version},xsbt.*;version=${sbt.version},xsbti.*;version=${sbt.version},sbinary.*;version=${sbinary.version},jline.*;version=0.9.94,org.apache.ivy.*;version=2.2.0</_exportcontents>
             <Embed-Directory>lib</Embed-Directory>
