--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -9,7 +9,6 @@
   <packaging>pom</packaging>
 
   <properties>
-    <scala.version>2.8.0</scala.version>
     <sbt.version>0.10.3</sbt.version>
     <patch.level>p0002</patch.level>
     <encoding>UTF-8</encoding>
@@ -108,7 +107,7 @@
       <properties>
         <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
         <scala.compiler.version>${scala.version}</scala.compiler.version>
-        <sbt.library.qualifier>2_10</sbt.library.qualifier>
+        <version.suffix>2_10</version.suffix>
 
         <!-- Used as part of the artifact name for SBT cross-compiled modules. -->
         <scala.major.minor.version>2.10</scala.major.minor.version>
@@ -132,7 +131,7 @@
       <properties>
         <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
         <scala.compiler.version>${scala.version}</scala.compiler.version>
-        <sbt.library.qualifier>2_09</sbt.library.qualifier>
+        <version.suffix>2_09</version.suffix>
 
         <!-- Used as part of the directory name for compiler-interface.jar. -->
         <scala.major.minor.version>2.9</scala.major.minor.version>
@@ -157,7 +156,7 @@
       <properties>
         <scala.compiler.groupid>org.scala-lang</scala.compiler.groupid>
         <scala.compiler.version>${scala.version}</scala.compiler.version>
-        <sbt.library.qualifier>2_08</sbt.library.qualifier>
+        <version.suffix>2_08</version.suffix>
 
         <!-- Used as part of the directory name for compiler-interface.jar. -->
         <scala.major.minor.version>2.8</scala.major.minor.version>
