--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -9,7 +9,6 @@
   <packaging>pom</packaging>
 
   <properties>
-    <scala.version>2.8.0</scala.version>
     <version.tag>nightly</version.tag>
     <version.suffix>2_10</version.suffix>
     <scala.version.short>2.10</scala.version.short>
@@ -18,6 +17,8 @@
     <maven.compiler.source>1.5</maven.compiler.source>
     <maven.compiler.target>1.5</maven.compiler.target>
     <encoding>UTF-8</encoding>
+    <!-- <toolchain.base.url>file:/Users/dragos/workspace/git/plugin/mkrepo</toolchain.base.url> -->
+    <toolchain.base.url>http://download.scala-ide.org</toolchain.base.url>
   </properties>
 
   <prerequisites>
@@ -179,7 +180,7 @@
           <id>scala-toolchain-2.8.0.final</id>
           <name>Scala Toolchain 2.8.0.final p2 repository</name>
           <layout>p2</layout>
-          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.8.0.final</url>
+          <url>${toolchain.base.url}/scala-eclipse-toolchain-osgi-2.8.0.final</url>
         </repository>
       </repositories>
     </profile>
@@ -212,7 +213,7 @@
           <id>scala-toolchain-2.8.1.final</id>
           <name>Scala Toolchain 2.8.1.final p2 repository</name>
           <layout>p2</layout>
-          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.8.1.final</url>
+          <url>${toolchain.base.url}/scala-eclipse-toolchain-osgi-2.8.1.final</url>
         </repository>
       </repositories>
     </profile>
@@ -244,7 +245,7 @@
           <id>scala-toolchain-2.8.2-SNAPSHOT</id>
           <name>Scala Toolchain 2.8.2-SNAPSHOT p2 repository</name>
           <layout>p2</layout>
-          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.8.2-SNAPSHOT</url>
+          <url>${toolchain.base.url}/scala-eclipse-toolchain-osgi-2.8.2-SNAPSHOT</url>
         </repository>
       </repositories>
     </profile>
@@ -277,7 +278,7 @@
           <id>scala-toolchain-2.9.0.final</id>
           <name>Scala Toolchain 2.9.0.final p2 repository</name>
           <layout>p2</layout>
-          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.9.0.final</url>
+          <url>${toolchain.base.url}/scala-eclipse-toolchain-osgi-2.9.0.final</url>
         </repository>
       </repositories>
     </profile>
@@ -310,7 +311,7 @@
           <id>scala-toolchain-2.9.0-1</id>
           <name>Scala Toolchain 2.9.0-1 p2 repository</name>
           <layout>p2</layout>
-          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.9.0-1</url>
+          <url>${toolchain.base.url}/scala-eclipse-toolchain-osgi-2.9.0-1</url>
         </repository>
       </repositories>
     </profile>
@@ -342,7 +343,7 @@
           <id>scala-toolchain-2.9.1.final</id>
           <name>Scala Toolchain 2.9.1.final p2 repository</name>
           <layout>p2</layout>
-          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.9.1.final</url>
+          <url>${toolchain.base.url}/scala-eclipse-toolchain-osgi-2.9.1.final</url>
         </repository>
       </repositories>
     </profile>
@@ -374,7 +375,7 @@
           <id>scala-toolchain-2.9.2-SNAPSHOT</id>
           <name>Scala Toolchain 2.9.2-SNAPSHOT p2 repository</name>
           <layout>p2</layout>
-          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-2.9.2-SNAPSHOT</url>
+          <url>${toolchain.base.url}/scala-eclipse-toolchain-osgi-2.9.2-SNAPSHOT</url>
         </repository>
       </repositories>
     </profile>
@@ -403,7 +404,7 @@
           <id>scala-toolchain-trunk</id>
           <name>Scala Toolchain trunk p2 repository</name>
           <layout>p2</layout>
-          <url>http://download.scala-ide.org/scala-eclipse-toolchain-osgi-trunk</url>
+          <url>${toolchain.base.url}/scala-eclipse-toolchain-osgi-trunk</url>
         </repository>
       </repositories>
     </profile>
