--- a/org.scala-ide.sdt.core/pom.xml
+++ b/org.scala-ide.sdt.core/pom.xml
@@ -24,6 +24,11 @@
     	<type>jar</type>
     	<scope>compile</scope>
     </dependency>
+    <!-- <dependency> -->
+    <!--   <groupId>org.scala-ide</groupId> -->
+    <!--   <artifactId>org.scala-ide.sbt.full.library</artifactId> -->
+    <!--   <version>${sbt.version}.${version.suffix}</version> -->
+    <!-- </dependency> -->
   </dependencies>
 
   <build>
