Fixed version suffix for 2.9.2-SNAPSHOT builds.

--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -358,7 +358,7 @@
         </property>
       </activation>
       <properties>
-        <version.suffix>29</version.suffix>
+        <version.suffix>2_09</version.suffix>
       </properties>
       <repositories>
         <repository>
