Better dependency between sdt.core project and sbt.full.library. The project name matches the bundle name and all jars are correctly exported by the project. The normal Plugin Dependencies mechanisms correctly adds the project to sdt.core's class path, so no more hard coded names to sbt jars in the sdt.core project.

--- a/org.scala-ide.build-toolchain/pom.xml
+++ b/org.scala-ide.build-toolchain/pom.xml
@@ -17,7 +17,7 @@
   <modules>
     <module>../org.scala-ide.scala.compiler</module>
     <module>../org.scala-ide.scala.library</module>
-    <module>../org.scala-ide.sbt</module>
+    <module>../org.scala-ide.sbt.full.library</module>
   </modules>
   <dependencyManagement>
     <dependencies>
