--- a/org.scala-ide.build/pom.xml
+++ b/org.scala-ide.build/pom.xml
@@ -252,6 +252,38 @@
       </repositories>
     </profile>
     <profile>
+      <id>scala-2.8.3-SNAPSHOT</id>
+      <activation>
+        <property>
+          <name>scala.version</name>
+          <value>2.8.3-SNAPSHOT</value>
+        </property>
+      </activation>
+      <properties>
+        <version.suffix>2_08</version.suffix>
+      </properties>
+      <repositories>
+        <repository>
+          <id>scala-refactoring-trunk</id>
+          <name>Scala Refactoring Scala 2.8.3-SNAPSHOT p2 repository</name>
+          <layout>p2</layout>
+          <url>${repo.scala-ide}/scala-refactoring-2.8.3-SNAPSHOT</url>
+        </repository>
+        <repository>
+          <id>scalariform-trunk</id>
+          <name>Scalariform Scala 2.8.3-SNAPSHOT p2 repo</name>
+          <layout>p2</layout>
+          <url>${repo.scala-ide}/scalariform-2.8.3-SNAPSHOT</url>
+        </repository>
+        <repository>
+          <id>scala-toolchain-2.8.3-SNAPSHOT</id>
+          <name>Scala Toolchain 2.8.3-SNAPSHOT p2 repository</name>
+          <layout>p2</layout>
+          <url>${repo.scala-ide}/scala-eclipse-toolchain-osgi-2.8.3-SNAPSHOT</url>
+        </repository>
+      </repositories>
+    </profile>
+    <profile>
       <id>scala-2.9.0</id>
       <activation>
         <property>
